  * WCS logs have length
  * [*Experimental*] In datasetScan element, allow the addition of proxy
    datasets that are not resolver services. This means that dynamic proxy
    datasets don't have to redirect through a catalog.
  * THREDDS Servlet Framework:
    - Streamline the discovery of CrawlableDataset descendants by adding
      exists() and getDescendant() methods.
 Bugs
  * IDV.jnlp grid:opendap:URL

Changes in version 3.12
 Features
  * WCS log messages, exceptions to log
  * add Thread dump (debug/show runtime) to look for lost threads
 Bugs
  * Grib iosp - handle duplicates
  * GridCoordSystem.isRegularSpatial() - remove Z axis from test, to allow non-regular variables in WCS
  * ucar.ma2.Range.contains() off-by-one : joinExisting aggregations read.section() failing

Changes in version 3.11
  Features
   * Generated catalogs now contain <date type="modified" /> elements where
     appropriate indicating the last modified time for that dataset.
     This is done in CollectionLevelScanner using CrawlableDataset.lastModified().
   * The HTML catalog view now uses information from <date type="modified" />
     elements to populate "Last Modified" field in dataset listings.
  API
   *
  BUGS
   * DODS Server should treat FileNotFoundException as user error, not a server error.
   * Improve thread safety of thredds.cataloggen.servlet.
  LIBRARIES
   * netcdf-java-2.2.17

Changes in version 3.10
 Bugs
  * bugs in nj22 - upgrade to 2.2.16.03
  * static catalogs now cached -  need to be checked for when they change

Changes in version 3.9
 Features
  * ServletParams allows persistent user init params; implement cache paths
  * WCS, NetcdfServer allows NcML aggregation, wrapping.
  * default ncml behavior: dont enhance, but allow enhance on ncml
  * dataRoots use req.getPathInfo(), ie exclude context and servlet paths.
  * review URL usage
    - move dynamic catalogs to use /thredds/catalog/ to avoid name conflicts